# cellularNNbackend

./: .gitignore  .gitmodules  LICENSE  datatobinary.py  pyproject.toml  server.py  worker.py
juliaWorker/OdeIntegration/: Manifest.toml  Project.toml
juliaWorker/OdeIntegration/src/: OdeIntegration.jl
